--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "drizzle-orm": "^0.33.0",
+    "fastify": "^4.28.1",
+    "fastify-type-provider-zod": "^2.0.0",
     "postgres": "^3.4.4",
     "task-server": "file:",
     "zod": "^3.23.8"
