--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "task-server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx --watch --env-file .env ./src/http/server.ts",
-    "seed": "tsx --watch --env-file .env ./src/db/seed.ts"
+    "seed": "tsx --env-file .env ./src/db/seed.ts"
   },
   "keywords": [],
   "author": "",
